#21 - Fix details skeleton title loading on mobile.

--- a/src/assets/scss/styles/templates/details.scss
+++ b/src/assets/scss/styles/templates/details.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  &__skeleton-heading {
+    max-width: 80%;
+  }
+
   &__title {
     display: flex;
     flex-direction: row;
